# ai-operational-memory

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_EXECUTION_PROTOCOL.md  CONTRIBUTING.md  DECISION_LOG.md  GOALS_AND_NON_GOALS.md  LICENSE  PROJECT_VISION.md  README.md  ROADMAP.md  STACK_DECISIONS.md  SYSTEM_PRINCIPLES.md  TASK_LOG.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
backend/: config.py  lifecycle.py  main.py  operations.py  scheduler.py
benchmarks/: bench_phase12.py  bench_phase13.py  run_all.py
cli/: __init__.py  main.py
cognition/: attention.py  deduplication.py  evidence_compression.py  prioritization.py  recurrence.py  signal_quality.py  temporal_analysis.py
delivery/: formatting.py  health.py  routing.py  telegram.py
docker/: Dockerfile
docs/: API_OVERVIEW.md  ARCHITECTURE.md  CLI.md  DEPLOYMENT.md  MAINTENANCE.md  OPERATIONS.md
integrations/: profiles.py
llm_intelligence/: cost_intelligence.py  ingestion_quality.py
memory/: drift_detector.py  llm_store.py  project_store.py  retention.py  snapshot_engine.py  storage_hygiene.py  store.py
reports/: digest.py  ecosystem_review.py  evidence_trace.py  generator.py  integration.py  investigation_report.py  maintenance.py  recommendation_engine.py  refinement.py  timeline.py
schemas/: project_schema.py
scripts/: bootstrap.sh  daily_report.py  ingestion_smoke.sh  integration_setup.sh  reality_check.sh  run_dev.sh  scheduled_scan.py
sdk/: __init__.py
tests/: test_attention.py  test_deduplication.py  test_delivery_formatting.py  test_delivery_routing.py  (+31 more)
(+27 files in other folders)
